2008-03-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* studio.cc: Fixed long-standing mod-manager crash.
	* all: Updated/reformatted mod manager files to use vectors and classes
	  instead of pointer to vectors and classes. Improved default game directory
	  to be the Exult.cfg-defined game name (e.g., BG and SI have default dirs
	  './blackgate' and './serpentisle'). Some readmes were updated accordingly.

2008-03-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing bug that caused reserved NPC #356 to be available when creating
	a new NPC.

2008-02-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* UCC: Added integer casting: '(byte)', '(char)', '(int)' and '(long)' will
	  force, respectfully, 8-bit, 8-bit, 16-bit and 32-bit integers. Default is
	  16-bit integer, and warnings will be issued in some cases. UCC does *not*
	  try to guess integer sizes anymore, except for function IDs and jump
	  offsets, to prevent past problems.
	* Keyring/SI Fixes: Eliminated compilation warnings due to the UCC changes.
	  Fixed 10-fold error in (unused) DAY constant. Added new diagonal moongates
	  to keyring.

2008-02-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	UCC: Fixed actor frame keyword bug.

2008-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed palette rotation bug on portraits by making them all translucent.
	* Fixed crash on SI when BG Paperdolls are turned off and a character's gump
	  is opened. Switched shape data to load after game flx is laded.

2008-02-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	UCC: Improved handling of structs. Added a manner of specifying the integer
	size of enums with the (optional) constructs
		enum IDENTIFIER : int { const list };
		enum IDENTIFIER : byte { const list };
		enum IDENTIFIER : char { const list };

2008-02-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Audio.cc: Fixed occasional segfault when doing garbage collection
	  on SFX cache.