@@ -92,6 +92,12 @@ void	Configuration::value(const string &key,int &ret,int defaultvalue) const
 		ret = defaultvalue;
 }
 
++bool	Configuration::key_exists(const string &key) const
+{
+	const XMLnode *sub=xmltree->subtree(key);
+	return sub != 0;
+}
+
 void	Configuration::set(const string &key, const string &value, bool write_out)
 {
 	// Break k up into '/' separated elements.
